// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsDObjectFormat format Formats the metric to an object 1`] = `
Object {
  "increment": Object {
    "stat": "metric_name",
    "tags": Object {
      "a": 1,
      "b": 2,
    },
  },
}
`;

exports[`StatsDObjectFormat format Formats the metric with options 1`] = `
Object {
  "increment_FORMATTED": Object {
    "arg1": "123",
    "arg2": 456,
    "stat": "metric_name_FORMATTED",
    "tags": Object {
      "a": 1,
      "b": 2,
      "thisIs": "FORMATTED",
    },
    "thisIs": "FORMATTED",
  },
}
`;

exports[`StatsDObjectFormat format Formats the tags to snake case keys 1`] = `
Object {
  "increment": Object {
    "stat": "metric_name",
    "tags": Object {
      "another_tag": 5,
      "camel_case_tag_1": "tagOne",
      "camel_case_tag_2": "tag_two",
    },
  },
}
`;

exports[`StatsDObjectFormat format Removes leading non-letters from metric name 1`] = `
Object {
  "increment": Object {
    "stat": "a_real_metric",
    "tags": Object {},
  },
}
`;

exports[`StatsDObjectFormat format Replaces with an underscore characters that are not ASCII alphanumerics, underscores, or periods in metric name 1`] = `
Object {
  "increment": Object {
    "stat": "a_real_Metric.Name_with_bad_chars___________9",
    "tags": Object {},
  },
}
`;
